Verion 0.9.43dev (?? ??? 2003)
  - Updated documentation in docs directory.
  - In week "view", table columns had wrong width setting
  - In year view, show days with events in bold.  Must enable new
    setting in System Settings since this is CPU-intensive.
  - Fixed bug 877797: edit_user.php would show form for changing password
    even if user.php was configured to not allow changing of passwords.
  - Allow users to enter HTML for the event description.  Includes
    addition to System Settings to enable this feature.  It is not
    enabled by default.
  - Patch 853298: allow event description to appear in day view for
    printer-friendly (enabled by new system setting)
  - Added ability to use custom header and trailer from System Settings page
  - Fixed bug 826653,825315: could not add events as public user event when
    system settings were configured to allow it
  - Show date/time of event in email notification for deleted event
  - Fixed bug 847246: week issue? (has been fixed in CVS)
  - Fixed bug 848302: \r still missing from publish.php
  - Fixed bug 848307: export_alarm_ical is called without description argument
  - Fixed bug 842402: group select offset wrong when nonusers listed at top
  - Fixed bug 826908: Dateselect didn't work ... no matter which browser is used
  - Fixed bug 788873: reminders not working for external users
  - Fixed bug 794749: HTTP_ACCEPT_LANUAGE not found if globals are not on.
  - Fixed bug 820854: missing CR in publish.php (violates iCal)
  - Fixed bug 801850: Don't allow adding of events via public calendar
    if user enters URL by hand.
  - Modified to use md5 hashes for passwords in webcal_user rather than
    storing the passwords as plain text.  (Requires updating database
    and running conversion script.   See UPGRADING.html.)
  - Patch 795371: fix for all day events in publish.php
  - Fixed bug 512114: Daylight saving time + repeating events
  - Fixed bug 669314: Daylight Savings Time Bug in 0.9.40